# lifehub

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  lifehub.code-workspace  load-secrets.sh  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run-dev.sh  run.sh  setup-vault.sh  svelte.config.js  tailwind.config.cjs
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  dev-requirements.txt  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2628905c520c_hash_user_emails.py  d9a8c1b0274f_add_is_admin_to_user.py
backend/lifehub/app/: api.py  fetch.py  setup.py
backend/lifehub/config/: checks.py  config_manager.py  constants.py  providers.py  vault.py
backend/lifehub/config/util/: schemas.py
backend/lifehub/core/admin/: dependencies.py  router.py  service.py
backend/lifehub/core/common/: database_service.py
backend/lifehub/core/module/: schema.py
backend/lifehub/core/provider/: models.py  schema.py  service.py
backend/lifehub/core/security/: encrypted_data.py  encryption.py  vault.py
backend/lifehub/core/user/: models.py  schema.py
backend/lifehub/modules/calendar/: models.py  router.py  service.py
backend/lifehub/modules/finance/: dependencies.py  models.py  repository.py  router.py  schema.py  service.py
backend/lifehub/modules/routine/: dependencies.py  models.py  router.py  service.py
backend/lifehub/providers/base/: base_fetcher.py
backend/lifehub/providers/gocardless/: api_client.py  (+1 more)
(+338 files in other folders)
