[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lifehub-backend"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "mariadb==1.1.9",
    "python-dotenv",
    "python-jose",
    "argon2-cffi",
    "pytz",
    "uvicorn",
    "python-multipart",
    "hvac>=2.3.0",
    "cryptography>=44.0.2",
    "redis>=5.2.1",
    "alembic>=1.15.2",
]

[tool.setuptools.packages]
find = {}

[project.scripts]
lifehub-api = "lifehub.app.api:run"
lifehub-fetch = "lifehub.app.fetch:run"
lifehub-setup = "lifehub.app.setup:setup"
lifehub-clean = "lifehub.app.setup:clean"

[tool.ruff]
lint.extend-select = ["I"]

[tool.mypy]
strict = true

exclude = '^tests/'

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    "types-cryptography>=3.3.23.2",
    "types-hvac>=2.3.0.20240621",
    "types-python-jose>=3.3.4.20240106",
    "types-pytz>=2024.2.0.20241003",
    "types-requests>=2.32.0.20241016",
]
